# CUDA-project-papd

./: README.md
RedEyeRemoval/: CMakeLists.txt  HW4.cu
SeamlessIMageCloning/: CMakeLists.txt  main.cpp
